--- a/pages/project/eng_proj.html
+++ b/pages/project/eng_proj.html
@@ -98,27 +98,27 @@
                                 <ul id="navig">
                                     <li>
                                         <a href="#picture10">
-                                            <img id="picture1" alt="Level Design Image 1"  src="LevelD/gallery-img-03.jpg" style="width:80%;max-width:180px;" >
+                                            <img id="picture1" alt="Level Design Image 1"  src="LevelD/gallery-img-s03.jpg" style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture11">
-                                            <img id="picture2" alt="Level Design Image 2" src="LevelD/gallery-img-09.jpg"  style="width:80%;max-width:180px;" >
+                                            <img id="picture2" alt="Level Design Image 2" src="LevelD/gallery-img-s09.jpg"  style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture12">
-                                            <img id="picture3" alt="Level Design Image 3" src="LevelD/gallery-img-12.jpg"  style="width:80%;max-width:180px;" >
+                                            <img id="picture3" alt="Level Design Image 3" src="LevelD/gallery-img-s14.jpg"  style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture13">
-                                            <img id="picture4" alt="Level Design Image 4" src="LevelD/gallery-img-20.jpg" style="width:80%;max-width:180px;" >
+                                            <img id="picture4" alt="Level Design Image 4" src="LevelD/gallery-img-s20.jpg" style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture14">
-                                            <img id="picture5" alt="Level Design Image 5" src="LevelD/gallery-img-50.jpg" style="width:80%;max-width:180px;" >
+                                            <img id="picture5" alt="Level Design Image 5" src="LevelD/gallery-img-s50.jpg" style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                 </ul>
@@ -131,7 +131,7 @@
                                         <img id="picture11" alt="Level Design Big Image 2"  src="LevelD/gallery-img-09.jpg" />
                                     </div>
                                     <div>
-                                        <img id="picture12" alt="Level Design Big Image 3" src="LevelD/gallery-img-12.jpg" />
+                                        <img id="picture12" alt="Level Design Big Image 3" src="LevelD/gallery-img-14.jpg" />
                                     </div>
                                     <div>
                                         <img id="picture13" alt="Level Design Big Image 4" src="LevelD/gallery-img-20.jpg" />
@@ -151,27 +151,27 @@
                                 <ul id="navig">
                                     <li>
                                         <a href="#picture20">
-                                            <img id="picture1" alt="CodeDevs Image 1"  src="DevsCode/gallery-img-42.jpg"style="width:80%;max-width:180px;" >
+                                            <img id="picture1" alt="CodeDevs Image 1"  src="DevsCode/gallery-img-s42.jpg"style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture21">
-                                            <img id="picture2" alt="CodeDevs  Image 2" src="DevsCode/gallery-img-72.jpg"  style="width:80%;max-width:180px;" >
+                                            <img id="picture2" alt="CodeDevs  Image 2" src="DevsCode/gallery-img-s72.jpg"  style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture22">
-                                            <img id="picture3" alt="CodeDevs  Image 3" src="DevsCode/gallery-img-74.jpg" style="width:80%;max-width:180px;" >
+                                            <img id="picture3" alt="CodeDevs  Image 3" src="DevsCode/gallery-img-s74.jpg" style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture23">
-                                            <img id="picture4" alt="CodeDevs  Image 4" src="DevsCode/gallery-img-77.jpg" style="width:80%;max-width:180px;" >
+                                            <img id="picture4" alt="CodeDevs  Image 4" src="DevsCode/gallery-img-s77.jpg" style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture24">
-                                            <img id="picture5" alt="CodeDevs  Image 5" src="DevsCode/gallery-img-83.jpg"style="width:80%;max-width:180px;" >
+                                            <img id="picture5" alt="CodeDevs  Image 5" src="DevsCode/gallery-img-s83.jpg"style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                 </ul>
