--- a/pages/project/eng_proj.html
+++ b/pages/project/eng_proj.html
@@ -14,9 +14,9 @@
 <body>
     <div id="header">
         <div id="top">     <!-- three box container -->
-            <!-- <div id="header-pic">
+            <div id="header-pic">
                 <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
-            </div> -->
+            </div>
             <div id="header-name">
                 <h1>Germain Hebert Portfolio En</h1>
             </div>        
@@ -28,11 +28,19 @@
                     <li><a href="spa_proj.html">Spanish</a>: Pre-Intermediate</li>
                 </ul>
             </div>
+  
+        <div id="pan">
+                <ul class="project-list" align = "middle">
+                    <li class="project-item" data-index="0">GameDesign</li> 
+                    <li class="project-item" data-index="1">LeveDesign</li>  
+                    <li class="project-item" data-index="2">CodeDevs</li>
+                </ul>
+            </div>
         </div>
     </div>
-
+        
         <div id="wrapper">  <!--  body holder -->
-            <div id="content">  <!-- third /two-third holder -->
+            <!-- <div id="content">  third /two-third holder -->
                 <div class="slideshow">                        
                         <div class="slide" data-index="0">
                             <h2>Game Design</h2>
@@ -59,11 +67,11 @@
                                             <img class="mySlide1" src="GameD/gallery-img-s33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
                                         </a>
                                     </li>
-                                    <!-- <li>
+                                    <li>
                                         <a href="#picture5">
                                             <img class="mySlide1" src="GameD/gallery-img-s34.jpg" alt="Game Design Image 5" style="width:70%;max-width:180px;">
                                         </a>
-                                    </li> -->
+                                    </li>
                                 </ul>
 
                                 <div id="full-picture">
@@ -83,9 +91,9 @@
                                         <img id="picture4" alt="Game Design Big Image 4" src="GameD/gallery-img-33.jpg" />
                                     </div>
 
-                                    <!-- <div>
+                                    <div>
                                         <img id="picture5" alt="Game Design Big Image 5" src="GameD/gallery-img-34.jpg" />
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -125,19 +133,19 @@
 
                                 <div id="full-picture">
                                     <div>
-                                        <img id="picture10" alt="Level Design Big Image 1" src="LevelD/gallery-img-03.jpg" />
+                                        <img id="picture10" alt="Level Design Big Image 1" src="LevelD/gallery-img-s03.jpg" />
                                     </div>
                                     <div>
-                                        <img id="picture11" alt="Level Design Big Image 2"  src="LevelD/gallery-img-09.jpg" />
+                                        <img id="picture11" alt="Level Design Big Image 2"  src="LevelD/gallery-img-s09.jpg" />
                                     </div>
                                     <div>
-                                        <img id="picture12" alt="Level Design Big Image 3" src="LevelD/gallery-img-14.jpg" />
+                                        <img id="picture12" alt="Level Design Big Image 3" src="LevelD/gallery-img-s14.jpg" />
                                     </div>
                                     <div>
-                                        <img id="picture13" alt="Level Design Big Image 4" src="LevelD/gallery-img-20.jpg" />
+                                        <img id="picture13" alt="Level Design Big Image 4" src="LevelD/gallery-img-s20.jpg" />
                                     </div>
                                     <div>
-                                        <img id="picture14" alt="Level Design Big Image 5" src="LevelD/gallery-img-50.jpg" />
+                                        <img id="picture14" alt="Level Design Big Image 5" src="LevelD/gallery-img-s50.jpg" />
                                     </div>
                                 </div>
                             </div>
@@ -196,9 +204,9 @@
                             </div>
                         </div>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
-    <div id="navigation">
+    <!-- <div id="navigation">
         <div id="pan">
         <div class="sidebar">
             <ul class="project-list">
@@ -208,7 +216,7 @@
             </ul>
         </div>
         </div>
-    </div>
+    </div> -->
     <div id="extra">
     <div id="footer">   
         <div id = "menu" align = "middle" >
