--- a/pages/project/fra_proj.html
+++ b/pages/project/fra_proj.html
@@ -39,12 +39,12 @@
                                 <ul id="navig">
                                     <li>
                                         <a href="#picture1">
-                                            <img class="mySlide1" src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
+                                            <img class="mySlide1" src="GameD/gallery-img-s30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture2">
-                                            <img class="mySlide1" src="GameD/gallery-img-31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
+                                            <img class="mySlide1" src="GameD/gallery-img-s31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
                                         </a>
                                     </li>
                                     <li>
@@ -54,35 +54,35 @@
                                     </li>
                                     <li>
                                         <a href="#picture4">
-                                            <img class="mySlide1" src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
+                                            <img class="mySlide1" src="GameD/gallery-img-s33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
                                         </a>
                                     </li>
-                                    <!-- <li>
+                                    <li>
                                         <a href="#picture5">
-                                            <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:70%;max-width:180px;">
+                                            <img class="mySlide1" src="GameD/gallery-img-s34.jpg" alt="Game Design Image 5" style="width:70%;max-width:180px;">
                                         </a>
-                                    </li> -->
+                                    </li>
                                 </ul>
 
                                 <div id="full-picture">
                                     <div>
-                                        <img id="picture1" alt="Game Design Big Image 1" src="GameD/gallery-img-30.jpg" />
+                                        <img id="picture1" alt="Game Design Big Image 1" src="GameD/gallery-img-s30.jpg" />
                                     </div>
 
                                     <div>
-                                        <img id="picture2" alt="Game Design Big Image 2"  src="GameD/gallery-img-31.jpg" />
+                                        <img id="picture2" alt="Game Design Big Image 2"  src="GameD/gallery-img-s31.jpg" />
                                     </div>
 
                                     <div>
-                                        <img id="picture3" alt="Game Design Big Image 3" src="GameD/gallery-img-32.jpg" />
+                                        <img id="picture3" alt="Game Design Big Image 3" src="GameD/gallery-img-s32.jpg" />
                                     </div>
 
                                     <div>
-                                        <img id="picture4" alt="Game Design Big Image 4" src="GameD/gallery-img-33.jpg" />
+                                        <img id="picture4" alt="Game Design Big Image 4" src="GameD/gallery-img-s33.jpg" />
                                     </div>
-                                    <!-- <div>
-                                        <img id="picture5" alt="Game Design Big Image 5" src="GameD/gallery-img-34jpg" />
-                                    </div> -->
+                                    <div>
+                                        <img id="picture5" alt="Game Design Big Image 5" src="GameD/gallery-img-s34jpg" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -95,46 +95,46 @@
                                 <ul id="navig">
                                     <li>
                                         <a href="#picture1">
-                                            <img id="picture1" alt="Level Design Image 1"  src="LevelD/gallery-img-03.jpg" style="width:80%;max-width:180px;" >
+                                            <img id="picture1" alt="Level Design Image 1"  src="LevelD/gallery-img-s03.jpg" style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture2">
-                                            <img id="picture2" alt="Level Design Image 2" src="LevelD/gallery-img-09.jpg"  style="width:80%;max-width:180px;" >
+                                            <img id="picture2" alt="Level Design Image 2" src="LevelD/gallery-img-s09.jpg"  style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture3">
-                                            <img id="picture3" alt="Level Design Image 3" src="LevelD/gallery-img-12.jpg"  style="width:80%;max-width:180px;" >
+                                            <img id="picture3" alt="Level Design Image 3" src="LevelD/gallery-img-s14.jpg"  style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture4">
-                                            <img id="picture4" alt="Level Design Image 4" src="LevelD/gallery-img-20.jpg" style="width:80%;max-width:180px;" >
+                                            <img id="picture4" alt="Level Design Image 4" src="LevelD/gallery-img-s20.jpg" style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture5">
-                                            <img id="picture5" alt="Level Design Image 5" src="LevelD/gallery-img-50.jpg" style="width:80%;max-width:180px;" >
+                                            <img id="picture5" alt="Level Design Image 5" src="LevelD/gallery-img-s50.jpg" style="width:80%;max-width:180px;" >
                                         </a>
                                     </li>
                                 </ul>
 
                                 <div id="full-picture">
                                     <div>
-                                        <img id="picture1" alt="Level Design Big Image 1" src="LevelD/gallery-img-03.jpg" />
+                                        <img id="picture1" alt="Level Design Big Image 1" src="LevelD/gallery-img-s03.jpg" />
                                     </div>
                                     <div>
-                                        <img id="picture2" alt="Level Design Big Image 2"  src="LevelD/gallery-img-09.jpg" />
+                                        <img id="picture2" alt="Level Design Big Image 2"  src="LevelD/gallery-img-s09.jpg" />
                                     </div>
                                     <div>
-                                        <img id="picture3" alt="Level Design Big Image 3" src="LevelD/gallery-img-12.jpg" />
+                                        <img id="picture3" alt="Level Design Big Image 3" src="LevelD/gallery-img-s14.jpg" />
                                     </div>
                                     <div>
-                                        <img id="picture4" alt="Level Design Big Image 4" src="LevelD/gallery-img-20.jpg" />
+                                        <img id="picture4" alt="Level Design Big Image 4" src="LevelD/gallery-img-s20.jpg" />
                                     </div>
                                     <div>
-                                        <img id="picture5" alt="Level Design Big Image 5" src="LevelD/gallery-img-50.jpg" />
+                                        <img id="picture5" alt="Level Design Big Image 5" src="LevelD/gallery-img-s50.jpg" />
                                     </div>
                                 </div>
                             </div>
@@ -149,46 +149,46 @@
                             <ul id="navig">
                                 <li>
                                     <a href="#picture1">
-                                        <img id="picture1" alt="CodeDevs Image 1"  src="DevsCode/gallery-img-42.jpg"style="width:80%;max-width:180px;" >
+                                        <img id="picture1" alt="CodeDevs Image 1"  src="DevsCode/gallery-img-s15.jpg"style="width:80%;max-width:180px;" >
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#picture2">
-                                        <img id="picture2" alt="CodeDevs  Image 2" src="DevsCode/gallery-img-72.jpg"  style="width:80%;max-width:180px;" >
+                                        <img id="picture2" alt="CodeDevs  Image 2" src="DevsCode/gallery-img-s72.jpg"  style="width:80%;max-width:180px;" >
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#picture3">
-                                        <img id="picture3" alt="CodeDevs  Image 3" src="DevsCode/gallery-img-74.jpg" style="width:80%;max-width:180px;" >
+                                        <img id="picture3" alt="CodeDevs  Image 3" src="DevsCode/gallery-img-s74.jpg" style="width:80%;max-width:180px;" >
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#picture4">
-                                        <img id="picture4" alt="CodeDevs  Image 4" src="DevsCode/gallery-img-77.jpg" style="width:80%;max-width:180px;" >
+                                        <img id="picture4" alt="CodeDevs  Image 4" src="DevsCode/gallery-img-s77.jpg" style="width:80%;max-width:180px;" >
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#picture5">
-                                        <img id="picture5" alt="CodeDevs  Image 5" src="DevsCode/gallery-img-83.jpg"style="width:80%;max-width:180px;" >
+                                        <img id="picture5" alt="CodeDevs  Image 5" src="DevsCode/gallery-img-s83.jpg"style="width:80%;max-width:180px;" >
                                     </a>
                                 </li>
                             </ul>
 
                             <div id="full-picture">
                                 <div>
-                                    <img id="picture1" alt="CodeDevs Big Image 1" src="DevsCode/gallery-img-42.jpg"/>
+                                    <img id="picture1" alt="CodeDevs Big Image 1" src="DevsCode/gallery-img-s15.jpg"/>
                                 </div>
                                 <div>
-                                    <img id="picture2" alt="CodeDevs Big Image 2"  src="DevsCode/gallery-img-72.jpg"  />
+                                    <img id="picture2" alt="CodeDevs Big Image 2"  src="DevsCode/gallery-img-s72.jpg"  />
                                 </div>
                                 <div>
-                                    <img id="picture3" alt="CodeDevs Big Image 3" src="DevsCode/gallery-img-74.jpg"/>
+                                    <img id="picture3" alt="CodeDevs Big Image 3" src="DevsCode/gallery-img-s74.jpg"/>
                                 </div>
                                 <div>
-                                    <img id="picture4" alt="CodeDevs Big Image 4" src="DevsCode/gallery-img-77.jpg" />
+                                    <img id="picture4" alt="CodeDevs Big Image 4" src="DevsCode/gallery-img-s77.jpg" />
                                 </div>
                                 <div>
-                                    <img id="picture5" alt="CodeDevs  Big Image 5" src="DevsCode/gallery-img-83.jpg"/>
+                                    <img id="picture5" alt="CodeDevs  Big Image 5" src="DevsCode/gallery-img-s  83.jpg"/>
                                 </div>
                             </div>
                         </div>
