--- a/pages/lang/english.html
+++ b/pages/lang/english.html
@@ -105,7 +105,7 @@
 			<div id="menu" align="middle">
 				<a href="english.html">HOME</a> |
 				<a href="../project/eng_proj.html">PROJECT</a> |
-				<a href="test/index.html">ABOUT</a>
+				<a href="../index.html">ABOUT</a>
 			</div>
 		</div>
 	</div>
