--- a/pages/lang/spanish.html
+++ b/pages/lang/spanish.html
@@ -103,7 +103,7 @@
                     <div  id = "menu" align="middle" >
                         <a href = "spanish.html">HOME</a> | 
                         <a href = "../project/spa_proj.html">PROJECT</a> | 
-                        <a href = "test/index.html">ABOUT</a>  
+                        <a href = "../index.html">ABOUT</a>  
                     </div>
                 </div>
 
