--- a/pages/project/eng_proj.html
+++ b/pages/project/eng_proj.html
@@ -214,7 +214,7 @@
         <div id = "menu" align = "middle" >
             <a href = "../lang/english.html">HOME</a> | 
             <a href = "./eng_proj.html">PROJECT</a> |
-            <a href = "../test/index.html">ABOUT</a>  
+            <a href = "../index.html">ABOUT</a>  
         </div>
     </div>
 </div>
