--- a/pages/project/fra_proj.html
+++ b/pages/project/fra_proj.html
@@ -14,7 +14,6 @@
 <body>
     <div id="header">
         <div id="top">     <!-- three box container -->
-
             <div id="header-name">
                 <h1>Germain Hebert Portfolio Fr</h1>
             </div>        
@@ -86,7 +85,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="slide" data-index="1">
 
                             <h2>Level Design</h2>
@@ -139,8 +137,6 @@
                                 </div>
                             </div>
                         </div>
-
-
                     <div class="slide" data-index="2">
 
                         <h2>Programming</h2>
@@ -198,10 +194,6 @@
                         <img class="mySlide3" src="DevsCode/gallery-img-77.jpg" alt="DevsCode Image 4" style="width:80%;max-width:180px;" >
                         <img class="mySlide3" src="DevsCode/gallery-img-83.jpg" alt="DevsCode Image 5" style="width:80%;max-width:180px;" > -->
                     </div>
-                    <!-- <div class="nav">
-                        <button class="prev">Prev</button>
-                        <button class="next">Next</button>
-                    </div>            -->
                 </div>
             </div>
         </div>
@@ -219,7 +211,7 @@
         <div id = "menu" align = "middle" >
             <a href = "../lang/english.html">HOME</a> | 
             <a href = "./eng_proj.html">PROJECT</a> |
-            <a href = "../test/index.html">ABOUT</a>  
+            <a href = "../index.html">ABOUT</a>  
         </div>
     </div>
 </div>
