--- a/pages/lang/french.html
+++ b/pages/lang/french.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <link rel="stylesheet" href="../styles/init_color1.css"> -->
     <link rel="stylesheet" href="../styles/init.css">
-    <!-- <link rel="stylesheet" href="../styles/init.css"> -->
     <title>PortFolio</title>
 </head>
 
@@ -14,7 +12,7 @@
                         <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:200px">
                     </div>
 
-                    <div id="header-name">
+                    <div id="header-name" align = "middle">
                         <h1>Germain Hebert</h1>
                     </div> 
                        
@@ -25,7 +23,9 @@
                             <li><a href="english.html">Anglais</a> : Courant</li>
                             <li><a href="spanish.html">Espagnol</a> : Pre-Intermediaire</li>
                         </ul>
-                    </div>
+                        <a href="https://github.com/GHebert42">GitHub </a> 
+                        <a href="https://www.w3profile.com/gehebert"> W3Schools </a> 
+                    </div>                    
                 
                 </div>
             </div>
@@ -104,7 +104,7 @@
                     <div  id = "menu" align="middle" >
                         <a href = "french.html">HOME</a> | 
                         <a href = "../project/fra_proj.html">PROJECT</a> | 
-                        <a href = "test/index.html">ABOUT</a>  
+                        <a href = "../index.html">ABOUT</a>  
                     </div>
                 </div>
             </div>
