puedo muchos cansados

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -15,15 +15,16 @@
 			<img src="./gehebert.jpeg" alt="Germain Hebert" style="width:100%" class="center" > 
 		</div>
 
-		<div class="about">
-			<div id="stag"><h2>ABOUT</h2></div> 
-		</div>
 
 		<div class="contact">
-			<div id="stag"><h2>CONTACT</h2></div>
+			<div id="stag"><p>CONTACT</p></div>
 			<ul>
-				<li> <div class="comp">	<i class="material-icons">mail</i> 	
-						hebertgermain.qc@gmail.com  </div>				</li> 
+				<li> 
+					<div class="comp">
+						<i class="material-icons">mail</i> 	
+							hebertgermain.qc@gmail.com  
+						</div>				
+				</li> 
 						
 				<li> <div class="comp">	<i class="material-icons">phone_android</i> 
 						551 909 9439 		</div>						</li>
@@ -33,8 +34,12 @@
 			</ul>
 		</div>
 
+		<div class="about">
+			<div id="stag"><p>ABOUT</p></div> 
+		</div>
+
 		<div class="skill">
-			<div id="stag"><h2>SKILL</h2></div> 
+			<div id="stag"><p>SKILL</p></div> 
 			<ul>
 				<li>VS Code </li>
 				<div class="slider">
@@ -82,26 +87,26 @@
 		<div id="mtag"><h1>MAIN</h1></div>
 		
 		<div class="name">
-			<div id="mtag"><h2>NAME</h2></div> 
+			<div id="mtag"><p>NAME</p></div> 
 		</div>
 
 		<div class="job">
-			<div id="mtag"><h2>JOB</h2></div> 
+			<div id="mtag"><p>JOB</p></div> 
 		</div>
 
 		<div class="obj">
-			<div id="mtag"><h2>EDU</h2></div> 
+			<div id="mtag"><p>EDU</p></div> 
 			<i class='fas fa-graduation-cap'></i>
 		</div>
 
 		<div class="edu">
-			<div id="mtag"><h2>EXP</h2></div> 
+			<div id="mtag"><p>EXP</p></div> 
 			<ul> <i class='fas fa-graduation-cap'></i>	</ul>
 
 		</div>
 
 		<div class="exp">
-			<div id="mtag"><h2>INTERET</h2></div> 			
+			<div id="mtag"><p>INTERET</p></div> 			
 			<i class='far fa-image'></i> 
 
 
