--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -17,7 +17,8 @@
 
 
 		<div class="contact">
-			<div id="stag"><p>CONTACT</p></div>
+			<div class="element">
+			<div id="stag"><p><u>CONTACT</u></p></div>
 			<ul>
 				<li> 
 					<div class="comp">
@@ -32,14 +33,13 @@
 				<li> <div class="comp">	<i class="material-icons">edit_location</i> 
 						Quebec, Qc, Canada	</div>					</li>	
 			</ul>
+			</div>
 		</div>
 
-		<div class="about">
-			<div id="stag"><p>ABOUT</p></div> 
-		</div>
 
 		<div class="skill">
 			<div id="stag"><p>SKILL</p></div> 
+
 			<ul>
 				<li>VS Code </li>
 				<div class="slider">
@@ -82,16 +82,33 @@
 		</div>
 
 	</div>
-
+<!-- 			-----------------------------			-----------------------------			 -->
 	<div id="main">
-		<div id="mtag"><h1>MAIN</h1></div>
-		
-		<div class="name">
-			<div id="mtag"><p>NAME</p></div> 
+				
+		<div id="name">
+			<u><p>GERMAIN HEBERT</p></u>
 		</div>
 
 		<div class="job">
-			<div id="mtag"><p>JOB</p></div> 
+			<!-- <div id="mtag"> -->
+				<u><p>Programmeur</p></u>
+			<!-- </div>  -->
+		</div>
+
+		<div id="about">
+			<div id="mtag"><p>Profil</p></div> 
+			<p>I am a hardworking and resilient worker who is not afraid of labor and prefers to avoid waste.<br></p>
+				<div id="pli"><em>&nbsp;&nbsp;&nbsp;- Culinary/Hospitality: Chef(Leader), Server (Public), Manager
+						(Responsible)...</em><br></div>
+				<p>I embody a fervent ally for a team, and my main qualities radiate from within.<br></p>
+				<div id="pli"><em>&nbsp;&nbsp;&nbsp;- Altruism (Father), Sharing (Mentor), Civic-minded, ...
+						Humility.</em><br></div>
+				<p>I accomplish tasks to the best of my abilities, respecting instructions and opinions, without fear of
+					expressing a potential mistake.<br></p>
+				<div id="pli"><em>&nbsp;&nbsp;&nbsp;- Willing, Dynamic, Enthusiastic.</em><br></div>
+				<p>I have a thirst for knowledge! A constant need for learning, testing, and innovating, to improve acquired
+					knowledge.<br></p>
+			</p>
 		</div>
 
 		<div class="obj">
@@ -106,8 +123,9 @@
 		</div>
 
 		<div class="exp">
-			<div id="mtag"><p>INTERET</p></div> 			
-			<i class='far fa-image'></i> 
+			<div id="mtag"><p>INTERET</p>
+				<i class='far fa-image'></i> 
+			</div> 			
 
 
 
