--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -39,7 +39,7 @@
 
 
 		<div class="skill">
-			<div id="stag"><p><u>COMPÉTENCES</u></p></div> 
+		<div id="stag"><p><u>COMPÉTENCES</u></p></div> 
 			<div id="skillbox">
 			<!-- <h3>Coding</h3> -->
 			<ul>
@@ -98,7 +98,8 @@
 			</div>
 		</div>
 		<!-- interets -->
-		<div id="stag"><p>INTERET</p>
+		<div id="stag"><p><u>INTERET</u></p>
+
 		
 		<ul>
 			<li> <i class='far fa-image'> Code </i>  </li>
@@ -122,9 +123,9 @@
 		</div>
 
 		<div id="about">
-			<div id="mtag"><p>Profil</p></div> 
-
-			<h3>Qui suis-je</h3>
+		<div id="aboutbox">
+			<div id="mtag"><p><u>Profil</u></p></div> 
+			<!-- <h3>Qui suis-je</h3> -->
 				<p>Je suis un travailleur assidu et resilient, qui n’a pas peur du labeur, et qui préfère éviter le gaspillage.<br></p>
 				<div id="pli"><strong>&nbsp;&nbsp;&nbsp;- Cuisine/Hotellerie: Chef(Leader), Serveur (Public), Gerant(Responsable)...</strong><br></div>
 				
@@ -143,6 +144,7 @@
 				&nbsp;&nbsp;&nbsp;-Totem : Caméléon [ornithorynque] <br>
 
 			</p>
+		</div>
 		</div>
 
 		<div class="obj">
