oublier de push dupc ,safety commit it is

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -98,6 +98,17 @@
 		<div class="int"></div>
 		<i class='far fa-image'> Code </i>  
 		<div id="stag"> <div id="stag"><strong><u>INTERET</u></strong></div>
+		<!-- <p>	LOISIRS -->
+<ul>
+	<li>		Lecture, </li>
+	<li>		musique, 	</li>
+	<li>		création (Légo),	</li>
+	<li>		jeux de société,	</li>
+				
+</ul> 			
+				
+	
+		</p>
 
 		<!-- <ul> -->
 			<!-- <li> -->
@@ -180,19 +191,21 @@
 <!-- 
 	HISTORIQUE EMPLOI
 
-Programmation
-42 Quebec,    2019-...
-Concepteur de jeux vidéo
-Scarecrow Digital, Québec    2012-…
-Intégrateur Web
-Artmérik International, Québec    2012-2013
-Cuisinier
-Cora Déjeuner, Ste-foy    2012-2019
-(Chef) Tutti Frutti, Québec    2008-2011
-La Vieille Maison du Spaghetti inc., Québec    2007-2008
-    2007-2008
+		Programmation
+		42 Quebec,    2019-...
+		Concepteur de jeux vidéo
+		Scarecrow Digital, Québec    2012-…
+		Intégrateur Web
+		Artmérik International, Québec    2012-2013
+		Cuisinier
+		Cora Déjeuner, Ste-foy    2012-2019
+		(Chef) Tutti Frutti, Québec    2008-2011
+
+
+
 ENGAGEMENT SOCIAL
 Participant     Bivouac Urbain, Québec 2011
+
 LOISIRS
  Lecture, musique, création (Légo) et jeux de société
 programmer, apprendre, socialiser!
