--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -145,15 +145,15 @@
 
         </p> -->
         </div>
-		  </div>
+	</div>
 
 
 
 		<div class="edu">
 			<div id="mtag"><strong><u>EDU</u></strong></div>
-		  	<i class='fas fa-graduation-cap'></i>
+		  	<!-- <i class='fas fa-graduation-cap'></i> -->
         <p>Programmation</p>
-          <ul>            <p>42s			</p>          </ul>
+          <ul>    <p>42s	</p>     </ul>
     </div>
 
 		<div class="exp">
