--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -107,7 +107,7 @@
 		</div> 	
 	</div>
 
-	<div id="stag"><strong><u> </u></strong></div>
+	<div id="stag"><strong><u>Bottom-Side</u></strong></div>
 
 <!-- 			-----------------------------			-----------------------------			 -->
 
@@ -119,7 +119,7 @@
     </div>
 	
     <!-- <div class="obj">		</div> -->
-    
+
 		<div id="about">
       
       <div id="mtag"><strong><u>PROFIL</u></strong></div>
