--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -101,12 +101,11 @@
 
       <div class="int">   <div id="stag">  <strong><u>INTERET</u></strong></div>
         <div id="intbox">
-          <ul>
-            <li>		<strong>Lecture,</strong>   </li>
-            <li>	  <strong>musique,</strong>  	</li>
-            <li>		<strong>création (Légo),</strong>	</li>
-            <li>		<strong>jeux de société,</strong>	</li>
-          </ul> 			
+          <!-- <ul> -->
+            <li>		<strong>Lecture:</strong> &nbsp;&nbsp;&nbsp; Sci-Fi, Fantastique, Thriller  </li>
+            <li>	  <strong>Musique:</strong> &nbsp;&nbsp;&nbsp; Classique, Metal, Dubstep 	</li>
+            <li>		<strong>Amusement:</strong> &nbsp;&nbsp;&nbsp; Rasberry Pi, Jeux Société, Légo	</li>
+          <!-- </ul> 			 -->
         </div>
       </div> 	
     </div>
@@ -133,12 +132,12 @@
 				<div id="mtag"><strong><u>ETUDE</u></strong></div>
 
 				<p><strong><em>Programmation:</em></strong></p>
-				<p>&nbsp;&nbsp;&nbsp;&nbsp;42Quebec:     2019 / ... </p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;42 Quebec:     2019 / ... </p>
 
-				<p><strong><em>GameDesign:</em></strong></p>
+				<p><strong><em>Game Design:</em></strong></p>
 				<p>&nbsp;&nbsp;&nbsp;&nbsp;AEC - Cegep, Limoilou:    2011 / 2013 </p>
 				
-        <p><strong><em>Intergation Web:</em></strong></p>
+        <p><strong><em>Web Design:</em></strong></p>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;Artmérik International, Québec:    2012-2013</p>
 			</div>
 
@@ -149,7 +148,7 @@
         <p><strong><em>Cuisinier:</em></strong></p> 
         <p>&nbsp;&nbsp;&nbsp;&nbsp;Cora Déjeuner, Ste-foy:    2012 / 2019	(resp.) </p>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;Tutti Frutti, Québec:     2005 / 2011 (Chef) </p>
-        
+
         <p><strong><em>Synthese:</em></strong></p>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;Professionel: Chef(Leader), Serveur(Public), Gerant(Responsable)...</p>
 				<p>&nbsp;&nbsp;&nbsp;&nbsp;Social: Altruisme(Papa), Partage(Mentor), Civisme, ...Humilite.</p>
