--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -57,8 +57,9 @@
             <!-- <div class="element">
               <div class="comp_sup">    
                 <ul> -->
-                  <li> <a href="https://www.linkedin.com/in/germainhebert42/" target="_blank">
-                    <i class="fa-brands fa-linkedin-in"> </i>	&nbsp;LinkedIn </a>                  </li>
+                  <li>  <i class="fa-brands fa-linkedin-in"> </i>
+                    <a href="https://www.linkedin.com/in/germainhebert42/" target="_blank">
+                   	&nbsp;LinkedIn </a>                  </li>
                 </ul>
               </div>
             </div>
